# Self-Healing-RAG

./: .env.example  .gitignore  README.md  pyproject.toml
data/docs/: self_healing_rag.md
src/self_healing_rag/: __init__.py  api.py  cli.py  config.py  constants.py  diagnostics.py  graph.py  loaders.py  prompts.py  schemas.py  security.py  service.py  source_policy.py  streamlit_app.py  vector_store.py
tests/: test_api.py  test_cli.py  test_diagnostics.py  test_graph.py  test_loaders.py  test_ollama_integration.py  test_prompts.py  test_service.py  test_source_policy.py  test_streamlit_app.py  test_vector_store.py
