[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "self-healing-rag"
version = "0.1.0"
description = "A LangGraph-based RAG pipeline that critiques its own answers and retries before responding."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "chromadb>=0.5.23",
  "fastapi>=0.115.0",
  "langchain-chroma>=0.2.0",
  "langchain-community>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-ollama>=0.2.0",
  "langchain-text-splitters>=0.3.0",
  "langgraph>=0.2.60",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "pydantic-settings>=2.6.0",
  "pypdf>=5.0.0",
  "python-multipart>=0.0.17",
  "requests>=2.32.3",
  "streamlit>=1.52.0",
  "typer>=0.13.0",
  "uvicorn[standard]>=0.32.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0"
]

[project.scripts]
rag = "self_healing_rag.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/self_healing_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
